replaced usage of deprecated APIs. Optimized code